--- a/RxJavaProject/app/src/main/res/layout/activity_main.xml
+++ b/RxJavaProject/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -182,5 +184,23 @@
             android:layout_height="wrap_content"
             android:onClick="operator_retry"
             android:text="异常操作符: retry" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="thread"
+            android:text="切换线程" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="flowable"
+            android:text="背压模式" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="RetrofitRxJava"
+            android:text="Retrofit RxJava" />
     </LinearLayout>
 </ScrollView>
