--- a/ARouterProject/personal/src/main/res/layout/personal_activity_main.xml
+++ b/ARouterProject/personal/src/main/res/layout/personal_activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
-        android:text="个人中心"
+        android:text="订单"
         android:onClick="jumpOrder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button" />
