组件接口调用

--- a/ARouterProject/personal/src/main/res/layout/personal_activity_main.xml
+++ b/ARouterProject/personal/src/main/res/layout/personal_activity_main.xml
@@ -45,4 +45,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button" />
 
+    <ImageView
+        android:id="@+id/textView2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="112dp"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.477"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        tools:src="@mipmap/ic_launcher" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
